fixed bug where content cards weren't blurring background correctly

--- a/stylesheets/components/_content-card.scss
+++ b/stylesheets/components/_content-card.scss
@@ -12,6 +12,8 @@
   font-size: 0.8em;
   width: 100%;
   overflow: hidden;
+  background-color: rgba(221, 97, 74, 0.25);
+  backdrop-filter: blur(5px);
   transition: all 200ms ease-in-out;
   .top-part {
     height: 150px;
@@ -45,8 +47,6 @@
       height: 100%;
       overflow: hidden;
       img {
-        // border-top-left-radius: 10px;
-        // border-top-right-radius: 10px;
         transform: scale(1.4);
         object-position: -16px -68px;
         transition: all 200ms ease-in-out;
@@ -62,8 +62,6 @@
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     border-top: 1px solid white;
-    backdrop-filter: blur(3px);
-    background-color: rgba(221, 97, 74, 0.25);
     padding: 10px;
     transition: all 200ms ease-in-out;
   }
