--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -465,6 +465,9 @@ main section div h1 {
   font-size: 0.8em;
   width: 100%;
   overflow: hidden;
+  background-color: rgba(221, 97, 74, 0.25);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   transition: all 200ms ease-in-out;
 }
 .card .top-part {
@@ -516,9 +519,6 @@ main section div h1 {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   border-top: 1px solid white;
-  -webkit-backdrop-filter: blur(3px);
-          backdrop-filter: blur(3px);
-  background-color: rgba(221, 97, 74, 0.25);
   padding: 10px;
   transition: all 200ms ease-in-out;
 }
